# sift

./: .gitignore  AGENTS.md  BENCH.md  Cargo.toml  README.md  plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
benchsuite/: README.md  benchsuite  pyproject.toml
crates/cli/: AGENTS.md  Cargo.toml  README.md
crates/core/: AGENTS.md  Cargo.toml  README.md
crates/core/benches/: README.md  search.rs
crates/core/src/: lib.rs  planner.rs  prefilter.rs  query.rs  search.rs  verify.rs
crates/core/src/index/: builder.rs  files.rs  mod.rs  trigram.rs
crates/core/src/search/: execute.rs  filter.rs  matcher.rs  mod.rs  types.rs
crates/core/src/storage/: format.rs  lexicon.rs  mod.rs  postings.rs
docs/perf/: linux-summary.csv  linux-summary.json
fuzz/: AGENTS.md  Cargo.toml  README.md
fuzz/fuzz_targets/: compile_only.rs  search_usage.rs
scripts/: bench.sh  bench_chart.py  cli_usage_integration.sh  cli_usage_smoke.sh  fuzz.sh  profile.sh
skills/: README.md
skills/sift-cli/: SKILL.md
tmp/sift-cli-integration-modes-ascii-mode-1113598-1/: t.txt
tmp/sift-cli-integration-modes-case-unicode-1113598-2/: t.txt
tmp/sift-cli-integration-modes-fixed-ignore-case-1113598-14/: t.txt
tmp/sift-cli-integration-modes-fixed-literal-1113598-12/: t.txt
tmp/sift-cli-integration-modes-invert-match-1113598-13/: t.txt
tmp/sift-cli-integration-modes-line-alt-1113598-17/: t.txt
tmp/sift-cli-integration-modes-line-only-1113598-16/: t.txt
tmp/sift-cli-integration-modes-line-regexp-1113598-15/: t.txt
tmp/sift-single-file-1111889/: one.txt
(+106 files in other folders)
